Fix Legend Header Cutoff

--- a/src/app/instructor/reports/reports.less
+++ b/src/app/instructor/reports/reports.less
@@ -292,29 +292,28 @@ article.legend-header {
 }
 
 p.legend-header {
-  line-height: 0.7;
+  position: relative;
   text-align: center;
 }
 p.legend-header span {
   display: inline-block;
   position: relative;
+  padding: 0 10px;
 }
 p.legend-header span:before,
 p.legend-header span:after {
   content: "";
   position: absolute;
-  height: 5px;
+  height: 1px;
   border-top: 1px solid #eeeeee;
-  top: 0;
+  top: 40%;
   width: 300px;
 }
 p.legend-header span:before {
   right: 100%;
-  margin-right: 15px;
 }
 p.legend-header span:after {
   left: 100%;
-  margin-left: 15px;
 }
 
 .fa-sort-down {
